# public/api-docs/swagger.json
@@ -11,7 +11,11 @@
     {
       "name": "User",
       "description": "All User Operations"
-    }
+    },
+      {
+          "name": "Home Page Data",
+          "description": "All Home Page Data"
+      }
   ],
   "paths": {
     "/auth/register": {
@@ -193,6 +197,56 @@
                       "required": true,
                       "type": "string"
                   }
+
+              ],
+              "responses": {
+                  "200": {
+                      "description": "Data"
+                  }
+              }
+          }
+      },
+      "/getHomeData": {
+          "get": {
+              "tags": [
+                  "Home Page Data"
+              ],
+              "summary": "Home Page Data",
+              "operationId": "getHomeData",
+              "produces": [
+                  "application/json"
+              ],
+              "security": [
+                  {
+                      "APIKeyHeader": []
+                  }
+              ],
+              "parameters": [
+
+              ],
+              "responses": {
+                  "200": {
+                      "description": "Data"
+                  }
+              }
+          }
+      },
+      "/getHeaderCategoriesData": {
+          "get": {
+              "tags": [
+                  "Home Page Data"
+              ],
+              "summary": "Categories Data",
+              "operationId": "getHeaderCategoriesData",
+              "produces": [
+                  "application/json"
+              ],
+              "security": [
+                  {
+                      "APIKeyHeader": []
+                  }
+              ],
+              "parameters": [
 
               ],
               "responses": {
